--- a/Admin/Static/startic-one.css
+++ b/Admin/Static/startic-one.css
@@ -9,22 +9,22 @@
     background-color: rgb(255, 255, 255);
 }
 .section{
-    float: left;
-    margin-top: 70px;
-    margin-left: 20px;
+    float: top;
+    margin-top: 10px;
+    margin-left: 500px;
 
     width: 500px;
-    height: 500px;
+    height: 50px;
     background-color: rgb(237, 241, 36);
 
 }
 .aside{
     float: right;
-    margin-right:100px ;
-    margin-top: 70px;
+    margin-right:300px ;
+    margin-top: 40px;
     background-color: rgb(239, 163, 163);
     width: 800px;
-    height: 400px;
+    height: 550px;
 
 }
 .card{
@@ -34,6 +34,10 @@
     margin-left: 20px;
     margin-top:20px ;
     
+}
+.box-1{
+    
+    margin-top:10px ;
 }
 
  
