--- a/Admin/HomeAdmin/home-admin.css
+++ b/Admin/HomeAdmin/home-admin.css
@@ -21,12 +21,76 @@
 .aside{
     float: right;
     margin-right:200px ;
-    margin-top: 100px;
-    background-color: rgb(254, 254, 254);
+    margin-top: 50px;
+    /* background-color: rgb(94, 93, 93); */
     width: 500px;
-    height: 300px;
+    height:700px;
+  
 
 }
+.box_tic{
+    /* margin-top: 20px; */
+    width: 380px;
+    height: 350px;
+    background-color:rgb(92, 133, 174);
+    text-align: center;
+   align-items: center;
+   border-radius: 15px;
+
+   
+}
+.content_tic{
+    text-align: center;
+    border-bottom: 1px solid #181717;
+    height:200px;
+    background-color: rgb(92, 133, 174);
+    flex-direction: column; 
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+}
+
+
+.footer_tic{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+}
+.bt-l {
+    padding-left: 2rem;
+}
+.bt-R {
+    padding-right: 2rem;
+}
+
+#button_d{
+    border: none;
+    border-radius: 8px;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+#button_suc{
+    border: none;
+    border-radius: 7px;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    /* width: 100%; */
+    font-size: 18px;
+}
+
 .box1{
     margin-top: 50px;
     width: 280px;
