--- a/Admin/Static/graph-1-one.css
+++ b/Admin/Static/graph-1-one.css
@@ -44,6 +44,13 @@
     margin-right: 150px;
 }
 
+.img-1{
+    width:  500px ;
+    height: 250px;
+    margin-left: 150px;
+    margin-top: 50px;
+}
+
  
 
  
