--- a/views/actor_comment.hbs
+++ b/views/actor_comment.hbs
@@ -1,18 +1,12 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <title>Title</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <link rel="stylesheet" href="comment.css">
+{{> basehead customTitle='comment | ' }}
 
-</head>
+  <link rel="/Actorcss/stylesheet" href="comment.css">
+
+
 
 <body>
   <header>
