--- a/views/actor_register.hbs
+++ b/views/actor_register.hbs
@@ -1,16 +1,9 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+{{> basehead customTitle='Register | ' }}
 
-    <title>Register</title>
-    <link href="register.css" rel="stylesheet"
-  </head>
+    <link href="/Actorcss/register.css" rel="stylesheet"
 
   <body class="text-center">
     <h1>สมัครสมาชิก</h1>
