--- a/views/admin_Login.hbs
+++ b/views/admin_Login.hbs
@@ -1,15 +1,10 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <title>LOGIN</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="Login-pang-one.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
+
+{{> basehead customTitle='Admin login | ' }}
+
+    <link rel="stylesheet" href="/Admincss/Login-pang-one.css">    
 
 <body>
 
