--- a/views/admin_graph-2.hbs
+++ b/views/admin_graph-2.hbs
@@ -1,17 +1,10 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <title>static</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="graph-1-one.css">
-</head>
+{{> basehead  customTitle='กราฟ | ' }}
+
+    <link rel="stylesheet" href="/Admincss/graph-1-one.css">
 
 <body>
   <header>
@@ -59,7 +52,7 @@
                     <div class="button">
                         <button type="button" name="" id="" class="btn btn-primary" href=" startic.html">ดูสถิติ</button>
                     </div>
-                </center>
+                </center>B
             </form>
         </div>
         
