--- a/Actor/2.login/login.css
+++ b/Actor/2.login/login.css
@@ -4,10 +4,10 @@ html, boby{
 
 body{
     padding: 5rem;
-    background-color: rgb(230, 26, 26);
+    background-color: aliceblue;
 }
 
 .form-login {
-    max-width: 5rem;
+    max-width: 25rem;
     margin: auto;
 }
